# non-empty-slice

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
changes/: ~as-mut-vec.feature.md  ~escape-ascii.feature.md  ~export.feature.md  ~feature.change.md  ~ownership.feature.md  ~repeat.feature.md  ~rewrite.change.md
src/: boxed.rs  cow.rs  empty.rs  format.rs  io.rs  iter.rs  lib.rs  macros.rs  owned.rs  ownership.rs  serde.rs  slice.rs  vec.rs
