[package]
name = "non-empty-slice"
version = "0.2.1"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Non-empty slices."
documentation = "https://docs.rs/non-empty-slice"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-slice"
license = "MIT"
keywords = ["non-empty", "slice"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.const-macros]
version = "0.3.0"

[dependencies.into-static]
version = "0.5.0"
default-features = false
optional = true

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[features]
default = ["std"]
diagnostics = ["dep:miette", "std"]
serde = ["dep:serde"]
static = ["into-static"]
unsafe-assert = []
alloc = ["serde?/alloc", "into-static?/alloc"]
std = ["serde?/std", "into-static?/std"]

[package.metadata.docs.rs]
features = ["serde", "static"]
rustdoc-args = ["--cfg", "docsrs"]
