[package]
name = "non-empty-slice"
version = "0.3.1"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Non-empty slices."
documentation = "https://docs.rs/non-empty-slice"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-slice"
license = "MIT"
keywords = ["non-empty", "slice"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.ownership]
version = "0.1.1"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[features]
default = ["std"]
diagnostics = ["dep:miette", "std"]
ownership = ["dep:ownership"]
serde = ["dep:serde"]
unsafe-assert = []
alloc = ["serde?/alloc", "ownership?/alloc"]
std = ["serde?/std", "ownership?/std"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
