[package]
name = "non-empty-slice"
version = "0.4.1"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.90"
description = "Non-empty slices."
documentation = "https://docs.rs/non-empty-slice"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-slice"
license = "MIT"
keywords = ["non-empty", "slice", "vec"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.non-zero-size]
version = "0.1.0"

[dependencies.non-empty-iter]
version = "0.2.0"
default-features = false

[dependencies.ownership]
version = "0.2.2"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.17"
default-features = false

[features]
default = ["std"]
diagnostics = ["dep:miette", "std"]
ownership = ["dep:ownership"]
serde = ["dep:serde"]
unsafe-assert = []
alloc = ["serde?/alloc", "ownership?/alloc", "non-empty-iter/alloc"]
std = ["serde?/std", "ownership?/std", "non-empty-iter/std"]

[package.metadata.docs.rs]
features = ["serde", "ownership"]
rustdoc-args = ["--cfg", "docsrs"]
